--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 amq-protocol = "*"
 serde = "*"
+tokio = "*"
+anyhow = "*"
 
 [dev-dependencies]
 celery = "0.4.0-rcn.11" 
-tokio = "*"
