--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-amq-protocol = "*"
-serde = "*"
-tokio = {version="*", features=["net", "io-util", "rt", "macros", "rt-multi-thread"] }
-anyhow = "*"
-bytes = "*"
+amq-protocol = "6"
+serde = "1"
+tokio = {version="1", features=["net", "io-util", "rt", "macros", "rt-multi-thread"] }
+anyhow = "1"
+bytes = "1"
+regex = "1"
+lazy_static = "1"
 
 [dev-dependencies]
 celery = "0.4.0-rcn.11" 
