--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 amq-protocol = "6"
 serde = "1"
-tokio = {version="1", features=["net", "io-util", "rt", "macros", "rt-multi-thread"] }
+tokio = {version="1", features=["net", "io-util", "rt", "macros", "rt-multi-thread", "time"] }
 anyhow = "1"
 bytes = "1"
 regex = "1"
