--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,11 @@ jobs:
         uses: actions-rs/cargo@v1.0.3
         with:
           command: test
+  
+  integration-test:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+      - run: docker-compose up --exit-code test-celery
