--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ anyhow = "1"
 bytes = "1"
 regex = "1"
 lazy_static = "1"
+diesel = { version = "1.4", features = ["postgres"] }
+dotenv = "0.15.0"
 
 [dev-dependencies]
 celery = "0.4.0-rcn.11"
