--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -12,6 +12,8 @@ cached-property==1.5.2
     # via kombu
 celery==5.2.3
     # via -r requirements.in
+cfgv==3.3.1
+    # via pre-commit
 click==8.0.3
     # via
     #   celery
@@ -24,18 +26,38 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.2.0
     # via celery
+distlib==0.3.4
+    # via virtualenv
+filelock==3.4.2
+    # via virtualenv
+identify==2.4.1
+    # via pre-commit
 importlib-metadata==4.10.0
     # via
     #   click
     #   kombu
+    #   pre-commit
+    #   virtualenv
 kombu==5.2.3
     # via celery
+nodeenv==1.6.0
+    # via pre-commit
+platformdirs==2.4.1
+    # via virtualenv
+pre-commit==2.16.0
+    # via -r requirements.in
 prompt-toolkit==3.0.24
     # via click-repl
 pytz==2021.3
     # via celery
+pyyaml==6.0
+    # via pre-commit
 six==1.16.0
-    # via click-repl
+    # via
+    #   click-repl
+    #   virtualenv
+toml==0.10.2
+    # via pre-commit
 typing-extensions==4.0.1
     # via importlib-metadata
 vine==5.0.0
@@ -43,6 +65,8 @@ vine==5.0.0
     #   amqp
     #   celery
     #   kombu
+virtualenv==20.12.1
+    # via pre-commit
 wcwidth==0.2.5
     # via prompt-toolkit
 zipp==3.6.0
