--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,46 +1,47 @@
-on: 
-  push:
-    branches:
-      - main
-  pull_request:
-  schedule:
-    - cron: '0 0 1 * *'
+---
+on:
+    push:
+        branches:
+            - main
+    pull_request:
+    schedule:
+        - cron: 0 0 1 * *
 
 name: Continuous integration
 
 jobs:
-  test:
-    name: Test suite
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: actions-rs/toolchain@v1.0.7
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          components: clippy, rustfmt
-      - uses: Swatinem/rust-cache@v1
-      - name: Check formatting
-        uses: actions-rs/cargo@v1.0.3
-        with:
-          command: fmt
-          args: -- --check
-      - name: Clippy
-        uses: actions-rs/cargo@v1.0.3
-        env:
-          RUSTFLAGS: -Dwarnings
-        with:
-          command: clippy
-      - name: Build and test
-        uses: actions-rs/cargo@v1.0.3
-        with:
-          command: test
-  
-  integration-test:
-    name: Integration Tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: satackey/action-docker-layer-caching@v0.0.11
-      - run: docker-compose up --exit-code test-celery
+    test:
+        name: Test suite
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2.3.4
+            - uses: actions-rs/toolchain@v1.0.7
+              with:
+                  profile: minimal
+                  toolchain: stable
+                  override: true
+                  components: clippy, rustfmt
+            - uses: Swatinem/rust-cache@v1
+            - name: Check formatting
+              uses: actions-rs/cargo@v1.0.3
+              with:
+                  command: fmt
+                  args: -- --check
+            - name: Clippy
+              uses: actions-rs/cargo@v1.0.3
+              env:
+                  RUSTFLAGS: -Dwarnings
+              with:
+                  command: clippy
+            - name: Build and test
+              uses: actions-rs/cargo@v1.0.3
+              with:
+                  command: test
+
+    integration-test:
+        name: Integration Tests
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2.3.4
+            - uses: satackey/action-docker-layer-caching@v0.0.11
+            - run: docker-compose up --exit-code test-celery
