--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,13 @@
+---
 repos:
-- repo: https://github.com/sqlfluff/sqlfluff
-  rev: 0.9.0
-  hooks:
-    - id: sqlfluff-fix    
-      exclude: ^migrations/00000000000000_diesel_initial_setup
-    - id: sqlfluff-lint
-      exclude: ^migrations/00000000000000_diesel_initial_setup
+    - repo: https://github.com/sqlfluff/sqlfluff
+      rev: 0.9.0
+      hooks:
+          - id: sqlfluff-fix
+            exclude: ^migrations/00000000000000_diesel_initial_setup
+          - id: sqlfluff-lint
+            exclude: ^migrations/00000000000000_diesel_initial_setup
+    - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
+      rev: 0.1.0
+      hooks:
+          - id: yamlfmt
