--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,25 @@
-version: "3"
+---
+version: '3'
 services:
-  db:
-    image: postgres:13
-    ports:
-      - 5432:5432
-    environment:
-      POSTGRES_PASSWORD: password
+    db:
+        image: postgres:13
+        ports:
+            - 5432:5432
+        environment:
+            POSTGRES_PASSWORD: password
 
-  cavalcade:
-    build: .
-    volumes:
-      - .:/work  
-    command: cargo run
+    cavalcade:
+        build: .
+        volumes:
+            - .:/work
+        command: cargo run
 
-  test-celery:
-    build:
-      context: tests
-      dockerfile: Dockerfile.celery_test
-    environment:
-      AMQP_HOST: cavalcade
-    command: wait-for-it --host=cavalcade --port=5672 --timeout=0 --strict -- python test_tasks.py worker --loglevel=DEBUG
-    volumes:
-      - ./tests:/work
+    test-celery:
+        build:
+            context: tests
+            dockerfile: Dockerfile.celery_test
+        environment:
+            AMQP_HOST: cavalcade
+        command: wait-for-it --host=cavalcade --port=5672 --timeout=0 --strict -- python test_tasks.py worker --loglevel=DEBUG
+        volumes:
+            - ./tests:/work
