--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,18 @@ name: Continuous integration
 
 jobs:
     test:
+        services:
+            postgres:
+                image: postgres:13
+                env:
+                    POSTGRES_PASSWORD: password
+                # Set health checks to wait until postgres has started
+                options: >-
+                    --health-cmd pg_isready
+                    --health-interval 10s
+                    --health-timeout 5s
+                    --health-retries 5
+
         name: Test suite
         runs-on: ubuntu-latest
         steps:
@@ -35,6 +47,8 @@ jobs:
                   command: clippy
             - name: Build and test
               uses: actions-rs/cargo@v1.0.3
+              env:
+                  DATABASE_URL: postgres://postgres:password@postgres/cavalcade
               with:
                   command: test
 
