--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
                   override: true
                   components: clippy, rustfmt
             - uses: Swatinem/rust-cache@v1
+              with:
+                  cache-on-failure: true
             - name: Check formatting
               uses: actions-rs/cargo@v1.0.3
               with:
