--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
             - name: Build and test
               uses: actions-rs/cargo@v1.0.3
               env:
-                  DATABASE_URL: postgres://postgres:password@postgres/cavalcade
+                  DATABASE_URL: postgres://postgres:password@localhost/cavalcade
               with:
                   command: test
 
