--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
         volumes:
             - .:/work
         command: cargo run
+        environment:
+            DATABASE_URL: postgres://postgres:password@db/cavalcade
 
     test-celery:
         build:
