--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
                 image: postgres:13
                 env:
                     POSTGRES_PASSWORD: password
+                    POSTGRES_DB: cavalcade
                 # Set health checks to wait until postgres has started
                 options: >-
                     --health-cmd pg_isready
