Install/run migrations in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,10 @@ jobs:
             - uses: Swatinem/rust-cache@v1
               with:
                   cache-on-failure: true
+            - name: Install diesel-cli
+              run: cargo install diesel_cli --no-default-features --features postgres
+            - name: Run migrations
+              run: diesel migration run
             - name: Check formatting
               uses: actions-rs/cargo@v1.0.3
               with:
