--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         build: .
         volumes:
             - .:/work
-        command: cargo run
+        command: bash -c "diesel migration run && cargo run"
         environment:
             DATABASE_URL: postgres://postgres:password@db/cavalcade
 
