--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,13 @@ bytes = "1"
 diesel = { version = "1.4", features = ["postgres", "r2d2", "serde_json"] }
 dotenv = "0.15.0"
 lazy_static = "1"
+log = "0.4"
 r2d2 = "0.8"
 regex = "1"
 serde = "1"
 serde_json = "*"
+simplelog = "0.11"
 tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "rt-multi-thread"] }
 
 [dev-dependencies]
 celery = "0.4.0-rcn.11"
-simplelog = "*"
