--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ regex = "1"
 serde = "1"
 serde_json = "*"
 simplelog = "0.11"
-sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json"] }
+sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "offline"] }
 tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "rt-multi-thread"] }
 
 [dev-dependencies]
