--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
 
     cavalcade:
         build: .
-        command: bash -c "cargo build && wait-for-db --mode postgres --connection-string postgres://postgres:password@db/cavalcade && diesel migration run
-            && cargo run"
+        command: bash -c "cargo build && wait-for-db --mode postgres --connection-string postgres://postgres:password@db/cavalcade && sqlx migrate run &&
+            cargo run"
         environment:
             DATABASE_URL: postgres://postgres:password@db/cavalcade
 
