--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 amq-protocol = "6"
 anyhow = "1"
 bytes = "1"
+chrono = "0.4"
 dotenv = "0.15.0"
 lazy_static = "1"
 log = "0.4"
@@ -14,7 +15,7 @@ regex = "1"
 serde = "1"
 serde_json = "*"
 simplelog = "0.11"
-sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "offline"] }
+sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "offline", "chrono"] }
 tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "rt-multi-thread"] }
 
 [dev-dependencies]
