--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ log4rs = "1"
 regex = "1"
 serde = "1"
 serde_json = "*"
-sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "offline", "chrono"] }
+sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "offline", "chrono", "uuid"] }
 tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "rt-multi-thread"] }
+uuid = { version = "0.8", features = ["v4"] }
 
 [dev-dependencies]
 celery = "0.4.0-rcn.11"
