--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
             - uses: Swatinem/rust-cache@v1
               with:
                   cache-on-failure: true
+            - run: echo "::add-matcher::rust-panic.json"
             - name: Install sqlx-cli
               run: cargo install sqlx-cli --no-default-features --features postgres,rustls
             - name: Run migrations
@@ -68,6 +69,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2.3.4
+            - run: echo "::add-matcher::rust-panic.json"
             - uses: satackey/action-docker-layer-caching@v0.0.11
             - run: docker-compose up --build --exit-code test-celery
 
@@ -76,6 +78,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2.3.4
+            - run: echo "::add-matcher::rust-panic.json"
             - uses: satackey/action-docker-layer-caching@v0.0.11
             - run: docker-compose up --build --exit-code test-celery
               env:
