--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,8 @@ jobs:
             - uses: actions/checkout@v2.3.4
             - uses: actions/github-script@v5
               env:
-                  SHA: ${{env.parentSHA}}
+                  PR_NUM: ${{github.event.issue.number}}
+                  REPO_OWNER: ${{github.repository_owner}}
               with:
                   script: |
                       const script = require('.github/no-annotations.js')
