--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,7 @@ jobs:
             # - run: echo "::add-matcher::.github/rust-panic.json"
             - uses: satackey/action-docker-layer-caching@v0.0.11
             - run: |-
+                  set -euo pipefail
                   docker-compose up --build --exit-code test-celery | tee -i all.log
                   grep "exited with code 0" all.log
                   grep -c panic all.log
