--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,13 @@ jobs:
                   set -euo pipefail
                   docker-compose up --build --exit-code test-celery | tee -i all.log
                   grep "exited with code 0" all.log
-                  grep -c panic all.log
+                  if grep panic all.log; then
+                    echo Found panic
+                    exit 1
+                  else
+                    echo No panic Found
+                  fi
+
             # - name: Check annotations
             #   uses: actions/github-script@v5
             #   if: success() && steps.findPr.outputs.number
