--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,70 +10,64 @@ on:
 name: Continuous integration
 
 jobs:
-    # test:
-    #     services:
-    #         postgres:
-    #             image: postgres:13
-    #             env:
-    #                 POSTGRES_PASSWORD: password
-    #                 POSTGRES_DB: cavalcade
-    #             # Set health checks to wait until postgres has started
-    #             options: >-
-    #                 --health-cmd pg_isready
-    #                 --health-interval 10s
-    #                 --health-timeout 5s
-    #                 --health-retries 5
-    #             ports:
-    #                 - 5432:5432
+    test:
+        services:
+            postgres:
+                image: postgres:13
+                env:
+                    POSTGRES_PASSWORD: password
+                    POSTGRES_DB: cavalcade
+                # Set health checks to wait until postgres has started
+                options: >-
+                    --health-cmd pg_isready
+                    --health-interval 10s
+                    --health-timeout 5s
+                    --health-retries 5
+                ports:
+                    - 5432:5432
 
-    #     name: Test suite
-    #     runs-on: ubuntu-latest
-    #     steps:
-    #         - uses: actions/checkout@v2.3.4
-    #         - uses: actions-rs/toolchain@v1.0.7
-    #           with:
-    #               profile: minimal
-    #               toolchain: stable
-    #               override: true
-    #               components: clippy, rustfmt
-    #         - uses: Swatinem/rust-cache@v1
-    #           with:
-    #               cache-on-failure: true
-    #         - run: echo "::add-matcher::.github/rust-panic.json"
-    #         - name: Install sqlx-cli
-    #           run: cargo install sqlx-cli --no-default-features --features postgres,rustls
-    #         - name: Run migrations
-    #           run: sqlx migrate run
-    #         - name: Check sqlx prepare
-    #           run: cargo sqlx prepare --check -- --lib
-    #         - name: Check formatting
-    #           uses: actions-rs/cargo@v1.0.3
-    #           with:
-    #               command: fmt
-    #               args: -- --check
-    #         - name: Clippy
-    #           uses: actions-rs/cargo@v1.0.3
-    #           env:
-    #               RUSTFLAGS: -Dwarnings
-    #           with:
-    #               command: clippy
-    #         - name: Build and test
-    #           uses: actions-rs/cargo@v1.0.3
-    #           env:
-    #               DATABASE_URL: postgres://postgres:password@localhost/cavalcade
-    #           with:
-    #               command: test
+        name: Test suite
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2.3.4
+            - uses: actions-rs/toolchain@v1.0.7
+              with:
+                  profile: minimal
+                  toolchain: stable
+                  override: true
+                  components: clippy, rustfmt
+            - uses: Swatinem/rust-cache@v1
+              with:
+                  cache-on-failure: true
+            - name: Install sqlx-cli
+              run: cargo install sqlx-cli --no-default-features --features postgres,rustls
+            - name: Run migrations
+              run: sqlx migrate run
+            - name: Check sqlx prepare
+              run: cargo sqlx prepare --check -- --lib
+            - name: Check formatting
+              uses: actions-rs/cargo@v1.0.3
+              with:
+                  command: fmt
+                  args: -- --check
+            - name: Clippy
+              uses: actions-rs/cargo@v1.0.3
+              env:
+                  RUSTFLAGS: -Dwarnings
+              with:
+                  command: clippy
+            - name: Build and test
+              uses: actions-rs/cargo@v1.0.3
+              env:
+                  DATABASE_URL: postgres://postgres:password@localhost/cavalcade
+              with:
+                  command: test
 
     postgres-integration-test:
         name: Postgres Integration Test
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2.3.4
-            # - uses: jwalton/gh-find-current-pr@v1
-            #   id: findPr
-            #   with:
-            #       state: open
-            # - run: echo "::add-matcher::.github/rust-panic.json"
             - uses: satackey/action-docker-layer-caching@v0.0.11
             - name: Run test-celery
               run: |-
@@ -87,25 +81,24 @@ jobs:
                     echo No panic Found
                   fi
 
-            # - name: Check annotations
-            #   uses: actions/github-script@v5
-            #   if: success() && steps.findPr.outputs.number
-            #   env:
-            #       PR_NUM: ${{ steps.findPr.outputs.pr }}
-            #       REPO_OWNER: ${{github.repository_owner}}
-            #   with:
-            #       script: |
-            #           const script = require('.github/no-annotations.js')
-            #           await script({github, context, core})
-
-    # crdb-integration-test:
-    #     name: Cockroach Integration Test
-    #     runs-on: ubuntu-latest
-    #     steps:
-    #         - uses: actions/checkout@v2.3.4
-    #         - run: echo "::add-matcher::.github/rust-panic.json"
-    #         - uses: satackey/action-docker-layer-caching@v0.0.11
-    #         - run: docker-compose up --build --exit-code test-celery
-    #           env:
-    #               COMPOSE_FILE: docker-compose.yml:docker-compose.cockroach.yml
+    crdb-integration-test:
+        name: Cockroach Integration Test
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2.3.4
+            - run: echo "::add-matcher::.github/rust-panic.json"
+            - uses: satackey/action-docker-layer-caching@v0.0.11
+            - name: Run test-celery
+              run: |-
+                  set -euo pipefail
+                  docker-compose up --build --exit-code test-celery | tee -i all.log
+                  grep "exited with code 0" all.log
+                  if grep panic all.log; then
+                    echo Found panic
+                    exit 1
+                  else
+                    echo No panic Found
+                  fi
+              env:
+                  COMPOSE_FILE: docker-compose.yml:docker-compose.cockroach.yml
 
