--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:password@localhost/cavalcade
+DATABASE_URL=postgresql://root@localhost:26257/defaultdb?sslmode=disable
