--- a/tests/Dockerfile.celery_test
+++ b/tests/Dockerfile.celery_test
@@ -4,3 +4,4 @@ RUN wget https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for
 COPY requirements.txt /work/
 RUN pip install -r requirements.txt
 COPY test_tasks.py /work
+ENV PYTHONUNBUFFERED=true
