Fix some nullable/not-nullable clashes

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=postgresql://root@localhost:26257/defaultdb?sslmode=disable
+DATABASE_URL=postgres://postgres:password@localhost/cavalcade
+
