--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,3 +103,34 @@ jobs:
               env:
                   COMPOSE_FILE: docker-compose.yml:docker-compose.cockroach.yml
 
+    docker-build:
+        name: Docker build test
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2.3.4
+            - uses: actions/cache@v2
+              with:
+                  path: |
+                      /tmp/.buildx-cache
+                  key: buildx-${{ runner.os }}-${{hashFiles('Dockerfile.release')}}
+            - name: Set up Docker Buildx
+              id: buildx
+              uses: docker/setup-buildx-action@v1
+            - name: Docker build
+              run: |
+                  docker buildx build -f Dockerfile.release --tag cavalcade:latest --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache,mode=max --output=type=docker .
+            - name: Docker help test
+              run: |
+                  docker run --name cavalcade cavalcade --help
+            - name: Docker copy
+              run: |
+                  docker cp cavalcade:/cavalcade cavalcade-linux-x64
+            - name: ldd check
+              run: |-
+                  ldd cavalcade-linux-x64 | grep "statically linked"
+                  retVal=$?
+                  if [ $retVal -ne 0 ]; then
+                    ldd cavalcade-linux-x64
+                    echo Found local non-static refs!
+                    exit 1
+                  fi                
