--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,4 @@ uuid = { version = "0.8", features = ["v4"] }
 
 [dev-dependencies]
 celery = "0.4.0-rcn.11"
-simplelog = "0.11"
+serial_test = "0.5"
