--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ log4rs = "1"
 regex = "1"
 serde = "1"
 serde_json = "*"
-sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "offline", "chrono", "uuid"] }
+sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "json", "chrono", "uuid"] }
 tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "rt-multi-thread"] }
-uuid = { version = "0.8", features = ["v4"] }
+uuid = { version = "1.4", features = ["v4"] }
 
 [dev-dependencies]
 celery = "0.5.3"
-serial_test = "0.5"
+serial_test = "2"
